log/build_2025-03-28_23-02-08/task_4/stderr.log
  File "/home/me597/install/task_4/lib/python3.10/site-packages/task_4/auto_navigator.py", line 116
    return (
           ^
SyntaxError: '(' was never closed

